--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="yandex_black">#1A1B22</color>
+    <color name="yandex_blue">#3772E7</color>
+    <color name="yandex_gray">#AEAFB4</color>
+    <color name="yandex_light_gray">#E6E8EB</color>
+
 </resources>
