--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:textSize="@dimen/text_header_small" />
 
     <Button
+        android:id="@+id/search_button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_medium"
@@ -35,6 +36,7 @@
         app:iconTint="@color/yandex_black" />
 
     <Button
+        android:id="@+id/library_button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_medium"
@@ -52,6 +54,7 @@
         app:iconTint="@color/yandex_black" />
 
     <Button
+        android:id="@+id/settings_button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_medium"
