--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -87,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_medium"
-            android:text="Пользовательское соглашение"
+            android:text="@string/terms_of_use"
             android:layout_gravity="start"
             android:textColor="@color/yandex_black"
             android:textSize="@dimen/text_medium" />
