--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
 
     <color name="yandex_black">#1A1B22</color>
     <color name="yandex_blue">#3772E7</color>
+    <color name="yandex_light_blue">#9FBBF3</color>
     <color name="yandex_gray">#AEAFB4</color>
     <color name="yandex_light_gray">#E6E8EB</color>
 
