--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,70 +5,31 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/yandex_blue"
+    android:background="?attr/backgroundPrimaryVariant"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_medium"
         android:text="@string/playlist_maker"
         android:textColor="@color/white"
-        android:textSize="@dimen/text_header_small" />
+        style="@style/HeadlineStyle" />
 
     <Button
         android:id="@+id/search_button"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/margin_medium"
-        android:layout_marginVertical="@dimen/margin_small"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/search"
-        android:textAllCaps="false"
-        android:textColor="@color/yandex_black"
-        android:textSize="@dimen/text_header_small"
-        app:cornerRadius="@dimen/border_radius"
         app:icon="@drawable/search"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/margin_small"
-        app:iconTint="@color/yandex_black" />
+        style="@style/LargeButtonStyle" />
 
     <Button
         android:id="@+id/library_button"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/margin_medium"
-        android:layout_marginVertical="@dimen/margin_small"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/library"
-        android:textAllCaps="false"
-        android:textColor="@color/yandex_black"
-        android:textSize="@dimen/text_header_small"
-        app:cornerRadius="@dimen/border_radius"
         app:icon="@drawable/library"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/margin_small"
-        app:iconTint="@color/yandex_black" />
+        style="@style/LargeButtonStyle" />
 
     <Button
         android:id="@+id/settings_button"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/margin_medium"
-        android:layout_marginVertical="@dimen/margin_small"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/settings"
-        android:textAllCaps="false"
-        android:textColor="@color/yandex_black"
-        android:textSize="@dimen/text_header_small"
-        app:cornerRadius="@dimen/border_radius"
         app:icon="@drawable/settings"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/margin_small"
-        app:iconTint="@color/yandex_black" />
+        style="@style/LargeButtonStyle" />
 
 </LinearLayout>
