--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,15 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundPrimary"
     tools:context=".SettingsActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_medium"
         android:text="@string/settings"
-        android:textColor="@color/yandex_black"
-        android:textSize="@dimen/text_header_small" />
+        android:textColor="?attr/textPrimary"
+        style="@style/HeadlineStyle" />
+
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -21,84 +20,48 @@
         android:layout_marginTop="@dimen/margin_small">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_medium"
             android:text="@string/dark_theme"
-            android:layout_gravity="start"
-            android:textColor="@color/yandex_black"
-            android:textSize="@dimen/text_medium" />
+            style="@style/SettingsItemText" />
 
         <androidx.appcompat.widget.SwitchCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_medium"
-            android:layout_gravity="end"
-            app:thumbTint="@color/yandex_gray"
-            app:trackTint="@color/yandex_light_gray" />
+            style="@style/SettingsItemIcon"
+            android:layout_marginVertical="0dp"
+            app:thumbTint="?attr/switcherPrimary"
+            app:trackTint="?attr/switcherPrimaryVariant" />
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_medium"
             android:text="@string/share_the_app"
-            android:layout_gravity="start"
-            android:textColor="@color/yandex_black"
-            android:textSize="@dimen/text_medium" />
-
+            style="@style/SettingsItemText" />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_medium"
-            android:layout_gravity="end"
             app:drawableEndCompat="@drawable/share"
-            app:drawableTint="@color/yandex_gray" />
+            style="@style/SettingsItemIcon" />
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_medium"
             android:text="@string/contact_support"
-            android:layout_gravity="start"
-            android:textColor="@color/yandex_black"
-            android:textSize="@dimen/text_medium" />
-
+            style="@style/SettingsItemText" />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_medium"
-            android:layout_gravity="end"
             app:drawableEndCompat="@drawable/support"
-            app:drawableTint="@color/yandex_gray" />
+            style="@style/SettingsItemIcon" />
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_medium"
             android:text="@string/terms_of_use"
-            android:layout_gravity="start"
-            android:textColor="@color/yandex_black"
-            android:textSize="@dimen/text_medium" />
+            style="@style/SettingsItemText" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_medium"
-            android:layout_gravity="end"
             app:drawableEndCompat="@drawable/arrow_forward"
-            app:drawableTint="@color/yandex_gray" />
+            style="@style/SettingsItemIcon" />
     </FrameLayout>
 
 </LinearLayout>
