--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,14 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
+    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
+        <item name="backgroundPrimary">@color/white</item>
+        <item name="backgroundPrimaryVariant">@color/yandex_blue</item>
+        <item name="buttonPrimary">@color/white</item>
+        <item name="textPrimary">@color/yandex_black</item>
+        <item name="textPrimaryVariant">@color/yandex_black</item>
+        <item name="iconPrimary">@color/yandex_gray</item>
+        <item name="switcherPrimary">@color/yandex_gray</item>
+        <item name="switcherPrimaryVariant">@color/yandex_light_gray</item>
+    </style>
 </resources>
