--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <style name="LargeButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
-        <item name="android:layout_marginHorizontal">@dimen/margin_medium</item>
-        <item name="android:layout_marginVertical">@dimen/margin_small</item>
+        <item name="android:layout_marginHorizontal">@dimen/space_16dp</item>
+        <item name="android:layout_marginVertical">@dimen/space_8dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:backgroundTint">?attr/buttonPrimary</item>
         <item name="android:textAllCaps">false</item>
@@ -12,7 +12,7 @@
         <item name="android:textSize">@dimen/text_header_small</item>
         <item name="cornerRadius">@dimen/border_radius</item>
         <item name="iconGravity">textStart</item>
-        <item name="iconPadding">@dimen/margin_small</item>
+        <item name="iconPadding">@dimen/space_8dp</item>
         <item name="iconTint">?attr/textPrimaryVariant</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
@@ -20,7 +20,7 @@
     <style name="SettingsItemText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/margin_medium</item>
+        <item name="android:layout_margin">@dimen/space_16dp</item>
         <item name="android:layout_gravity">start</item>
         <item name="android:textColor">?attr/textPrimary</item>
         <item name="android:textSize">@dimen/text_medium</item>
@@ -30,8 +30,8 @@
     <style name="SettingsItemIcon">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginHorizontal">@dimen/margin_medium</item>
-        <item name="android:layout_marginVertical">@dimen/margin_medium</item>
+        <item name="android:layout_marginHorizontal">@dimen/space_16dp</item>
+        <item name="android:layout_marginVertical">@dimen/space_16dp</item>
         <item name="drawableTint">?attr/iconPrimary</item>
         <item name="android:layout_gravity">end</item>
     </style>
@@ -39,7 +39,7 @@
     <style name="HeadlineStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/margin_medium</item>
+        <item name="android:layout_margin">@dimen/space_16dp</item>
         <item name="android:textSize">@dimen/text_header_small</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
