--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,11 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/main"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:background="?attr/backgroundPrimary"
+tools:context=".SearchActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:src="@drawable/back"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/space_16dp"
+            app:tint="?attr/textPrimary" />
+        <TextView
+            android:text="@string/search"
+            android:textColor="?attr/textPrimary"
+            style="@style/HeadlineStyle" />
+
+    </LinearLayout>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/space_16dp" >
+
+        <EditText
+            android:id="@+id/input_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints=""
+            android:padding="@dimen/space_16dp"
+            android:background="@drawable/rounded_background"
+            android:drawableStart="@drawable/search"
+            android:drawableTint="?attr/onTextField"
+            android:drawablePadding="@dimen/space_8dp"
+            android:textColor="@color/yandex_black"
+            android:textColorHint="?attr/onTextField"
+            android:hint="@string/search"
+            android:inputType="text"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:imeOptions="actionSearch" />
+
+        <ImageView
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/clear_input"
+            android:src="@drawable/clear_icon"
+            app:tint="?attr/onTextField"
+            android:padding="@dimen/space_12dp"
+            android:layout_gravity="end|center_vertical"
+            android:visibility="gone" />
+
+    </FrameLayout>
+
+</LinearLayout>
