--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,8 +12,8 @@
         <item name="textPrimary">@color/yandex_black</item>
         <item name="textPrimaryVariant">@color/yandex_black</item>
         <item name="iconPrimary">@color/yandex_gray</item>
-        <item name="switcherPrimary">@color/yandex_gray</item>
-        <item name="switcherPrimaryVariant">@color/yandex_light_gray</item>
+        <item name="switcherThumbTint">@color/yandex_gray</item>
+        <item name="switcherTrackTint">@color/yandex_light_gray</item>
 
         <item name="textField">@color/yandex_light_gray</item>
         <item name="onTextField">@color/yandex_gray</item>
