--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,10 @@
 
     <dimen name="text_header_small">22sp</dimen>
     <dimen name="text_size_medium">16sp</dimen>
+    <dimen name="text_size_small">11sp</dimen>
 
     <dimen name="border_radius">16dp</dimen>
+
+    <dimen name="image_small">45dp</dimen>
 
 </resources>
