--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -5,13 +5,13 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
+    android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="8dp"
-    android:layout_marginHorizontal="16dp">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
 
-<ImageView
+    <ImageView
         android:id="@+id/ivArtwork"
         android:layout_width="@dimen/image_small"
         android:layout_height="@dimen/image_small"
@@ -21,32 +21,32 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginStart="@dimen/space_8dp"
         android:layout_marginEnd="@dimen/space_16dp"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvTrackName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:fontFamily="@font/ys_display_regular"
+            android:maxLines="1"
             android:text=""
             android:textColor="?attr/foreground"
-            android:fontFamily="@font/ys_display_regular"
-            android:textSize="@dimen/text_size_medium"/>
+            android:textSize="@dimen/text_size_medium" />
 
         <TextView
             android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:fontFamily="@font/ys_display_regular"
+            android:maxLines="1"
             android:text=""
             android:textColor="?attr/foregroundVariant"
-            android:fontFamily="@font/ys_display_regular"
-            android:textSize="@dimen/text_size_small"/>
+            android:textSize="@dimen/text_size_small" />
     </LinearLayout>
 
     <ImageView
