--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,6 +14,7 @@
         android:id="@+id/ivArtwork"
         android:layout_width="@dimen/image_small"
         android:layout_height="@dimen/image_small"
+        android:contentDescription="@string/cover"
         android:scaleType="centerCrop"
         android:src="@drawable/image" />
 
