--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -36,13 +36,15 @@
             android:drawableTint="?attr/onTextField"
             android:ellipsize="end"
             android:hint="@string/search"
-            android:imeOptions="actionSearch"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
             android:paddingHorizontal="@dimen/space_12dp"
-            android:paddingVertical="@dimen/space_8dp"
 
+            android:paddingVertical="@dimen/space_8dp"
+            android:singleLine="true"
             android:textColor="@color/yandex_black"
+
             android:textColorHint="?attr/onTextField"
             android:textCursorDrawable="@drawable/textedit_cursor" />
 
@@ -67,5 +69,9 @@
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/track_item" />
+
+    <include layout="@layout/no_network" />
+
+    <include layout="@layout/no_results" />
 
 </LinearLayout>
