--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -16,7 +16,7 @@
         android:layout_height="@dimen/image_small"
         android:contentDescription="@string/cover"
         android:scaleType="centerCrop"
-        android:src="@drawable/image" />
+        android:src="@drawable/placeholder" />
 
     <LinearLayout
         android:layout_width="0dp"
