--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,7 +24,7 @@
         <item name="noNetworkImage">@drawable/no_network_light</item>
         <item name="noResultsImage">@drawable/no_results_light</item>
 
-        <item name="retryButtonBackground">@color/yandex_blue</item>
+        <item name="retryButtonBackground">@color/yandex_black</item>
 
     </style>
 </resources>
