--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,6 +20,7 @@
         app:titleTextColor="?attr/textPrimary" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/smThemeSwitcher"
         style="@style/SettingOptionWithIcon"
         android:text="@string/dark_theme"
         app:thumbTint="?attr/switcherThumbTint"
