--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="text_header_small">22sp</dimen>
     <dimen name="text_size_large">19sp</dimen>
     <dimen name="text_size_medium">16sp</dimen>
+    <dimen name="text_14sp">14sp</dimen>
+    <dimen name="text_13sp">13sp</dimen>
     <dimen name="text_size_small">11sp</dimen>
 
     <dimen name="border_radius">16dp</dimen>
