--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,4 +49,28 @@
         <item name="android:textColor">?attr/textPrimary</item>
     </style>
 
+    <style name="TextLarge">
+        <item name="android:textSize">@dimen/text_header_small</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">?attr/textPrimary</item>
+    </style>
+
+    <style name="TextSmall">
+        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">?attr/textPrimary</item>
+    </style>
+
+    <style name="Label">
+        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/yandex_gray</item>
+    </style>
+
+    <style name="Info">
+        <item name="android:textSize">@dimen/text_13sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">?attr/textPrimary</item>
+    </style>
+
 </resources>
