--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,6 +18,7 @@
     <attr name="noNetworkImage" format="reference" />
     <attr name="noResultsImage" format="reference" />
     <attr name="play" format="reference" />
+    <attr name="pause" format="reference" />
     <attr name="rounded_button" format="reference" />
 
     <attr name="retryButtonBackground" format="color" />
