--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="image_small">45dp</dimen>
     <dimen name="image_medium">120dp</dimen>
 
+    <dimen name="progress_bar_size">44dp</dimen>
 </resources>
