--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="?attr/backgroundPrimaryVariant"
     android:orientation="vertical"
-    tools:context=".presentation.main.MainActivity">
+    tools:context=".main.ui.MainActivity">
 
 
     <com.google.android.material.appbar.MaterialToolbar
