--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:background="?attr/backgroundPrimary"
     tools:context=".player.ui.PlayerActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
