--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,4 +73,11 @@
         <item name="android:textColor">?attr/textPrimary</item>
     </style>
 
+    <style name="TextAppearance.Design.Tab.Custom" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?attr/retryButtonBackground</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
+
 </resources>
